--- a/learning.cbp
+++ b/learning.cbp
@@ -34,8 +34,16 @@
 			<Add option="-Wall" />
 			<Add option="-std=c++98" />
 			<Add option="-fexceptions" />
+			<Add directory="include" />
 		</Compiler>
-		<Unit filename="main.cpp" />
+		<Linker>
+			<Add library="lib/libuv.a" />
+			<Add directory="lib" />
+		</Linker>
+		<Unit filename="main.cpp">
+			<Option target="Release" />
+		</Unit>
+		<Unit filename="mainuv.cpp" />
 		<Extensions />
 	</Project>
 </CodeBlocks_project_file>
